--- a/crprj/build.gradle
+++ b/crprj/build.gradle
@@ -1,51 +1,39 @@
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.6' //バージョンを4.x以上に設定
+plugins {
+	id 'org.springframework.boot' version '2.4.4'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'java'
+	id 'eclipse'
+	id 'idea'
+	id 'maven'
 }
+//apply plugin: 'io.spring.dependency-management'
 
-buildscript {
-	ext {
-		springBootVersion = '2.0.2.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
-}
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-jar {
-	baseName = 'crprj'
-	version = '0.0.1-SNAPSHOT'
-}
-sourceCompatibility = 11
-targetCompatibility = 11
-// 32bitマシンはJava8までなので以下に変更すること
-//sourceCompatibility = 1.8
-//targetCompatibility = 1.8
+// jar {
+// 	baseName = 'crprj'
+// 	version = '0.0.1-SNAPSHOT'
+// }
+group = 'crprj'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-mail')
-	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-mail')
+	implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-    compile group: 'org.javassist', name:'javassist', version: '3.23.1-GA'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    implementation group: 'org.javassist', name:'javassist', version: '3.23.1-GA'
 	
 	runtime("org.mariadb.jdbc:mariadb-java-client:2.2.5")
 	compileOnly('org.projectlombok:lombok')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
